correct spacing issue for rank edit actions

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -77,7 +77,7 @@ a {
 	// Mixins
 	@include corners(3px, 3px, 3px, 3px);
 	// Box properties
-	padding: 0 4px;
+	// padding: 0 4px;
 	// Background & borders
 	// Typography
 	color: $brand;
